fix alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -985,6 +985,8 @@ i[class*="icon"] {font-style: normal;}
   }
 }
 
+.user-info > ul > li > h2 { margin-left: 16px;}
+
 .user-list {
   & > li {
     max-width: 80%;
